--- a/roles/users/vars/main.yml
+++ b/roles/users/vars/main.yml
@@ -1,2 +1,10 @@
 ---
-# vars file for users
+users:
+  - username: redux
+    use_sudo: yes
+
+  - username: deploy
+    use_sudo: yes
+
+  - username: nosudo
+    use_sudo: no
