--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -8,15 +8,10 @@
         with_items: {{users}}
 
       - name: Setup | authorized key upload
-        authorized_key: user={{ item.username }}
-        key="{{ lookup('file', 'files/{{ item.username }}.pub') }}"
+        authorized_key: user={{ item.username }} key="{{ lookup('file', 'files/{{ item.username }}.pub') }}"
         with_items: '{{users}}'
 
       - name: Sudoers | update sudoers file and validate
-        lineinfile: "dest=/etc/sudoers
-        insertafter=EOF
-        line='{{ item.username }} ALL=(ALL) NOPASSWD: ALL'
-        regexp='^{{ item.username }} .*'
-        state=present"
+        lineinfile: "dest=/etc/sudoers insertafter=EOF line='{{ item.username }} ALL=(ALL) NOPASSWD: ALL' regexp='^{{ item.username }} .*' state=present"
         when: '{{ item.use_sudo }} == True'
         with_items: '{{users}}'
