--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -1,12 +1,15 @@
 - name: Create users
   user: name={{ item.username}} shell=/bin/bash createhome=yes
   with_items: '{{users}}'
+  tags: ['user-creation']
 
 - name: Setup | authorized key upload
   authorized_key: user={{ item.username }} key="{{ lookup('file', 'files/{{ item.username }}.pub') }}"
   with_items: '{{users}}'
+  tags: ['user-creation']
 
 - name: Sudoers | update sudoers file and validate
   lineinfile: "dest=/etc/sudoers insertafter=EOF line='{{ item.username }} ALL=(ALL) NOPASSWD: ALL' regexp='^{{ item.username }} .*' state=present"
   when: '{{ item.use_sudo }} == True'
   with_items: '{{users}}'
+  tags: ['user-creation']
