Adding bastion role

--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -4,6 +4,7 @@
 
   - name: Set system hostname
     hostname: name= {{item.servername}}
+    with_items: '{{bastionname}}'
 
   - name: update /etc/hosts
     lineinfile: "dest=/etc/hosts insertafter=BOF line='127.0.0.1 {{ item.servername }}'  state=present"
