Adding bastion role

--- a/roles/bastion/vars/main.yml
+++ b/roles/bastion/vars/main.yml
@@ -1,9 +1,8 @@
 ---
   bastionname:
-    - servername: nr-dakota-oprs-bastion.dakotafunds.com
+    - servername: "nr-dakota-oprs-bastion.dakotafunds.com"
   users:
     - username: redux
       use_sudo: yes
     - username: deploy
       use_sudo: yes
-    
