--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -10,6 +10,10 @@
     lineinfile: "dest=/etc/hosts insertafter=BOF line='127.0.0.1 {{ item.servername }}'  state=present"
     with_items: '{{bastionname}}'
 
+  - name : set hostname on reboot
+    lineinfile: "dest=/etc/rc.local insertbefore="exit 0" line= 'hostname {{ item.servername }}' state=present
+    with_items: '{{bastionname}}'
+
   - name: Set bashrc for root
     copy: src=bashrc dest=/root/.bashrc  owner=root group=root mode=0644
 
