--- a/roles/nginx/templates/vhost.conf
+++ b/roles/nginx/templates/vhost.conf
@@ -16,7 +16,7 @@ server {
         gzip_types image/svg+xml text/css application/x-javascript image/jpeg image/gif image/png image/bmp application/javascript;
         client_max_body_size 30M;
 
-        include conf.d/headers.conf;
+        #include conf.d/headers.conf;
 
         location / {
           root /home/deploy/public_html;
