--- a/roles/php7-fpm/tasks/main.yml
+++ b/roles/php7-fpm/tasks/main.yml
@@ -27,5 +27,5 @@
     template: src=php.ini.j2 dest=/etc/php/7.0/cli/php.ini owner=root group=root mode=0644
     notify: Restart php-fpm
 
-  - name: start php-fpm service
+  - name: Start php-fpm service
     notify: Start php-fpm
