--- a/roles/php7-fpm/tasks/main.yml
+++ b/roles/php7-fpm/tasks/main.yml
@@ -28,4 +28,4 @@
     notify: Restart php-fpm
 
   - name: Start php-fpm service
-    notify: Start php-fpm
+    service: name=php7.0-fpm state=started  enabled=yes
