--- a/roles/apache_solr/tasks/install.yml
+++ b/roles/apache_solr/tasks/install.yml
@@ -3,6 +3,7 @@
   package: name={{ item }} state=present
   with_items:
     - openjdk-8-jre-headless
+    - acl
 
 - name: Run Solr installation script.
   shell: >
