--- a/roles/apache_solr/tasks/install.yml
+++ b/roles/apache_solr/tasks/install.yml
@@ -22,5 +22,5 @@
     path: "{{ solr_home }}/logs"
     state: directory
     owner: root
-    group: {{ solr_user }}
+    group: "{{ solr_user }}"
     mode: 0775
