--- a/roles/drupal8/defaults/main.yml
+++ b/roles/drupal8/defaults/main.yml
@@ -2,7 +2,7 @@
 
 drupal_mysql_user: "dev_dakota"
 drupal_mysql_db: "dev_dakota"
-drupal_site_name: "dev.dakotafunds.com"
+drupal_system_site_name: "dev.dakotafunds.com"
 drupal_db:
   user: "{{ drupal_mysql_user }}"
   password: "mAeia4j#1wiwXbdd"
@@ -16,7 +16,7 @@ mysql_databases:
 
 drupal_docroot: "/home/deploy/public_html/{{ drual_site_name }}"
 
-drupal_site_name: "Dakota {{ drupal_site_name }}"
+drupal_site_name: "Dakota {{ drupal_system_site_name }}"
 drupal_account_name: "admin"
 drupal_account_pass: "admin123"
 
