--- a/roles/php7-fpm/tasks/main.yml
+++ b/roles/php7-fpm/tasks/main.yml
@@ -14,6 +14,12 @@
       - php7.0-pdo
       - php7.0-curl
       - php7.0-xml
+      - php7.0-mbstring
+      - php7.0-cli
+      - php7.0-common
+      - php7.0-mcrypt
+      - php7.0-intl
+      - php7.0-bz2
 
   - name: Add php-fpm configuration files
     template: src=www.conf.j2 dest=/etc/php/7.0/fpm/pool.d/www.conf owner=root group=root mode=0644
