--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -68,7 +68,7 @@
     --site-name="{{ drupal_site_name }}"
     --account-name={{ drupal_account_name }}
     --account-pass={{ drupal_account_pass }}
-    --db-url=mysql://{{ drupal_db.user }}:{{ drupal_db.password }}@localhost/{{ drupal_db.name }}
+    --db-url=mysql://{{ drupal_db.user }}:{{ drupal_db.password }}@127.0.0.1/{{ drupal_db.name }}
     -r {{ drupal_docroot }}
 
   when: not drush_status.stdout | search("Drupal bootstrap\s+:\s+Successful")
