configure solr configfiles

--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -117,7 +117,7 @@
     - dd if=/dev/zero of=/var/swap.1 bs=1M count=1024
     - chmod 600 /var/swap.1
     - swapon /var/swap.1
-  when: "Package drupal/search_api_solr not found" in check_module
+  when: '"Package drupal/search_api_solr not found" in check_module'
 
 - name: Composer | install solr search module
   composer:
@@ -126,14 +126,14 @@
     working_dir: "{{ drupal_docroot }}"
   become: true
   become_user: "{{ drupal_system_user }}"
-  when: "Package drupal/search_api_solr not found" in check_module
+  when: '"Package drupal/search_api_solr not found" in check_module'
 
 - name: disable swap | dependencey for composer
   command: "{{ item }}"
   with_items:
     - swapoff /var/swap.1
     - rm -f /var/swap.1
-  when: "Package drupal/search_api_solr not found" in check_module
+  when: '"Package drupal/search_api_solr not found" in check_module'
 
 - name: Configure solr
   copy: src= {{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x dest= {{solr_home}}/conf remote_src=yes
