--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -136,7 +136,7 @@
   when: '"Package drupal/search_api_solr not found" in check_module'
 
 - name: Configure solr
-  copy: src={{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x/ dest={{solr_home}}/conf/ remote_src=yes
+  command: cp -r {{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x/* {{solr_home}}/conf/ remote_src=yes
 
 - name: enable solr module using drush
   command: drush en search_api_solr search_api_solr_defaults
