--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -139,7 +139,7 @@
   command: cp -r {{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x/ {{solr_home}}/conf/
 
 - name: enable solr module using drush
-  command: drush en search_api_solr search_api_solr_defaults
+  command: chdir={{ drupal_docroot }} drush en search_api_solr search_api_solr_defaults -y
 
 
 - name: Set permission of druapl home to deploy
