--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -139,8 +139,9 @@
   command: cp -r {{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x/ {{solr_home}}/conf/
 
 - name: enable solr module using drush
-  command: chdir={{ drupal_docroot }} drush en search_api_solr search_api_solr_defaults -y
-
+  command: drush en search_api_solr search_api_solr_defaults -y
+  args:
+    chdir={{ drupal_docroot }}/
 
 - name: Set permission of druapl home to deploy
   file:
