--- a/roles/percona-mysql/tasks/main.yml
+++ b/roles/percona-mysql/tasks/main.yml
@@ -66,7 +66,7 @@
   mysql_db: name=test state=absent
 
 - name: Copy custom configuration file
-  copy: src=redux.conf dest=/etc/mysql/percona-server.conf.d/redux.conf owner=root group=root mode=0644
+  copy: src=redux.conf dest=/etc/mysql/my.cnf owner=root group=root mode=0644
 
 - name: Restart Percona MySQL Server
   service: name=mysql state=restarted
