--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -29,7 +29,7 @@
       mode: 0755
 
   - name: Install ntp on server
-    yum: name=ntp state=installed
+    apt: name=ntp state=installed
 
   - name: Copy NTP configuration
     template: src=ntp.conf.j2 dest=/etc/ntp.conf
