re-order playbook

--- a/roles/percona-mysql/files/redux.conf
+++ b/roles/percona-mysql/files/redux.conf
@@ -2,7 +2,6 @@
 
 # MyISAM #
 key-buffer-size                = 16M
-myisam-recover                 = FORCE,BACKUP
 
 # SAFETY #
 max-allowed-packet             = 16M
@@ -13,6 +12,7 @@ max-connect-errors             = 1000000
 log-bin                        = /var/lib/mysql/mysql-bin
 expire-logs-days               = 3
 sync-binlog                    = 1
+server-id                      = 1
 
 # CACHES AND LIMITS #
 tmp-table-size                 = 16M
@@ -21,7 +21,7 @@ query-cache-type               = 0
 query-cache-size               = 0
 max-connections                = 500
 thread-cache-size              = 50
-open-files-limit               = 65535
+open-files-limit               = 1024
 table-definition-cache         = 4096
 table-open-cache               = 1024
 
