re-order playbook

--- a/setup-stage.yml
+++ b/setup-stage.yml
@@ -1,8 +1,7 @@
 ---
-- hosts: all
+- hosts: devserver
   become: true
   gather_facts: false
-  server_env: stage
   tasks:
     - name: update apt cache
       apt: update_cache=yes cache_valid_time=86400
