user removal test

--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -16,11 +16,11 @@
 
 - name: Check if user exists
   command: getent passwd {{ item.user}}
-  with_items: '{{ remove-users }}'
+  with_items: '{{ remove_users }}'
   register: user_exist
   ignore_errors: yes # continue with the playbook
 
 - name: Remove users
   user: name={{ item.user}} state=absent  remove=yes
-  with_items: '{{ remove-users }}'
+  with_items: '{{ remove_users }}'
   when: user_exist.rc == 0
