re-organsie playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./dev
+inventory = ./dev/hosts
 remote_user = redux
 private_key_file = ./redux-labs-us-west-2.pem
 host_key_checking = false
