re-organsie playbook

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -52,4 +52,4 @@
     copy: src=bash_profile dest=/etc/skel/.bash_profile owner=root group=root mode=0644
 
   - name: Install motd
-    copy: src=etc_motd dest=/etc/motd owner=root group=root mode=0644
+    template: src=etc_motd.j2 dest=/etc/motd owner=root group=root mode=0644
