--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -66,4 +66,4 @@
     service: name=sshd state=started enabled=yes
 
   - name: Install motd
-    copy: src=etc_motd dest=/etc/motd owner=root group=root mode=0644
+    template: src=etc_motd.j2 dest=/etc/motd owner=root group=root mode=0644
