re-organsie playbook

--- a/roles/drupal8/tasks/main.yml
+++ b/roles/drupal8/tasks/main.yml
@@ -123,8 +123,9 @@
   command: "{{ item }}"
   with_items:
     - swapoff /var/swap.1
+    - mkswap /var/swap.1
     - rm -f /var/swap.1
-  
+
 
 - name: Configure solr
   command: rsync -a {{ drupal_docroot }}/modules/contrib/search_api_solr/solr-conf/6.x/ {{solr_home}}/conf/
